--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2021"
 rust-version = "1.80"
 
 [dependencies]
-anyhow = "1.0.68"                                # error handling
-bytes = "1.3.0"                                  # helps manage buffers
-thiserror = "1.0.38"                             # error handling
+thiserror = "1.0.38"
+tokio = { version = "1.42.0", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
